// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`roundingMode 1`] = `
{
  "annotation": {},
  "chartType": "column",
  "config": {
    "column": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "stackCornerRadius": [
        4,
        4,
        4,
        4,
      ],
      "tooltip": {
        "enable": true,
      },
      "xAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#36415926",
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#797B85",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#3641594d",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#3641594d",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#646A73",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "column": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "stackCornerRadius": [
          4,
          4,
          4,
          4,
        ],
        "tooltip": {
          "enable": true,
        },
        "xAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#36415926",
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#797B85",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#3641594d",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#3641594d",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#646A73",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__DimGroupID__": "num0-num0",
      "__DimGroup__": "num0",
      "__MeaId__": "num0",
      "__MeaName__": "num0",
      "__MeaValue__": 123.34,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num0": 123.34,
    },
    {
      "__DimGroupID__": "num1-num1",
      "__DimGroup__": "num1",
      "__MeaId__": "num1",
      "__MeaName__": "num1",
      "__MeaValue__": 123.38,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num1": 123.38,
    },
    {
      "__DimGroupID__": "num2-num2",
      "__DimGroup__": "num2",
      "__MeaId__": "num2",
      "__MeaName__": "num2",
      "__MeaValue__": -123.34,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num2": -123.34,
    },
    {
      "__DimGroupID__": "num3-num3",
      "__DimGroup__": "num3",
      "__MeaId__": "num3",
      "__MeaName__": "num3",
      "__MeaValue__": -123.38,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num3": -123.38,
    },
    {
      "__DimGroupID__": "num4-num4",
      "__DimGroup__": "num4",
      "__MeaId__": "num4",
      "__MeaName__": "num4",
      "__MeaValue__": 123.34,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num4": 123.34,
    },
    {
      "__DimGroupID__": "num5-num5",
      "__DimGroup__": "num5",
      "__MeaId__": "num5",
      "__MeaName__": "num5",
      "__MeaValue__": 234.38,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num5": 234.38,
    },
    {
      "__DimGroupID__": "num6-num6",
      "__DimGroup__": "num6",
      "__MeaId__": "num6",
      "__MeaName__": "num6",
      "__MeaValue__": -234.34,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num6": -234.34,
    },
    {
      "__DimGroupID__": "num7-num7",
      "__DimGroup__": "num7",
      "__MeaId__": "num7",
      "__MeaName__": "num7",
      "__MeaValue__": -234.38,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num7": -234.38,
    },
    {
      "__DimGroupID__": "num8-num8",
      "__DimGroup__": "num8",
      "__MeaId__": "num8",
      "__MeaName__": "num8",
      "__MeaValue__": 4.5,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num8": 4.5,
    },
    {
      "__DimGroupID__": "num9-num9",
      "__DimGroup__": "num9",
      "__MeaId__": "num9",
      "__MeaName__": "num9",
      "__MeaValue__": 3.5,
      "__OriginalData__": {
        "num0": 123.34,
        "num1": 123.38,
        "num2": -123.34,
        "num3": -123.38,
        "num4": 123.34,
        "num5": 234.38,
        "num6": -234.34,
        "num7": -234.38,
        "num8": 4.5,
        "num9": 3.5,
      },
      "num9": 3.5,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "num0": undefined,
          "num1": undefined,
          "num2": undefined,
          "num3": undefined,
          "num4": undefined,
          "num5": undefined,
          "num6": undefined,
          "num7": undefined,
          "num8": undefined,
          "num9": undefined,
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
      },
      "id": "2D1M",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "num0-num0": "num0",
          "num1-num1": "num1",
          "num2-num2": "num2",
          "num3-num3": "num3",
          "num4-num4": "num4",
          "num5-num5": "num5",
          "num6-num6": "num6",
          "num7-num7": "num7",
          "num8-num8": "num8",
          "num9-num9": "num9",
        },
        "colorItems": [
          "num0-num0",
          "num1-num1",
          "num2-num2",
          "num3-num3",
          "num4-num4",
          "num5-num5",
          "num6-num6",
          "num7-num7",
          "num8-num8",
          "num9-num9",
        ],
        "groupId": "__DimGroupID__",
        "groupName": "__DimGroup__",
      },
    },
  ],
  "dimensions": [],
  "encoding": [
    {
      "color": [
        "__MeaName__",
      ],
      "group": [
        "__DimGroupID__",
      ],
      "x": [
        "__MeaName__",
      ],
      "y": [
        "__MeaValue__",
      ],
    },
  ],
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "format": {
        "fractionDigits": 1,
        "roundingMode": "floor",
        "type": "number",
      },
      "id": "num0",
    },
    {
      "format": {
        "fractionDigits": 1,
        "roundingMode": "ceil",
        "type": "number",
      },
      "id": "num1",
    },
    {
      "format": {
        "fractionDigits": 1,
        "roundingMode": "expand",
        "type": "number",
      },
      "id": "num2",
    },
    {
      "format": {
        "fractionDigits": 1,
        "roundingMode": "trunc",
        "type": "number",
      },
      "id": "num3",
    },
    {
      "format": {
        "fractionDigits": 1,
        "roundingMode": "halfCeil",
        "type": "number",
      },
      "id": "num4",
    },
    {
      "format": {
        "fractionDigits": 1,
        "roundingMode": "halfFloor",
        "type": "number",
      },
      "id": "num5",
    },
    {
      "format": {
        "fractionDigits": 1,
        "roundingMode": "halfExpand",
        "type": "number",
      },
      "id": "num6",
    },
    {
      "format": {
        "fractionDigits": 1,
        "roundingMode": "halfTrunc",
        "type": "number",
      },
      "id": "num7",
    },
    {
      "format": {
        "fractionDigits": 0,
        "roundingMode": "halfEven",
        "type": "number",
      },
      "id": "num8",
    },
    {
      "format": {
        "fractionDigits": 0,
        "roundingMode": "halfEven",
        "type": "number",
      },
      "id": "num9",
    },
  ],
}
`;

exports[`roundingMode 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#3641594d",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineWidth": 0.5,
          "stroke": "#36415926",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 7,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "style": {
          "angle": 0,
          "fill": "#797B85",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#3641594d",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "lineWidth": 1,
    },
  },
  "color": {
    "domain": [
      "num0-num0",
      "num1-num1",
      "num2-num2",
      "num3-num3",
      "num4-num4",
      "num5-num5",
      "num6-num6",
      "num7-num7",
      "num8-num8",
      "num9-num9",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__DimGroupID__": {
        "sortIndex": 0,
      },
      "__MeaName__": {
        "sortIndex": 0,
      },
    },
    "id": "2D1M",
    "values": [
      {
        "__DimGroupID__": "num0-num0",
        "__DimGroup__": "num0",
        "__MeaId__": "num0",
        "__MeaName__": "num0",
        "__MeaValue__": 123.34,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num0": 123.34,
      },
      {
        "__DimGroupID__": "num1-num1",
        "__DimGroup__": "num1",
        "__MeaId__": "num1",
        "__MeaName__": "num1",
        "__MeaValue__": 123.38,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num1": 123.38,
      },
      {
        "__DimGroupID__": "num2-num2",
        "__DimGroup__": "num2",
        "__MeaId__": "num2",
        "__MeaName__": "num2",
        "__MeaValue__": -123.34,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num2": -123.34,
      },
      {
        "__DimGroupID__": "num3-num3",
        "__DimGroup__": "num3",
        "__MeaId__": "num3",
        "__MeaName__": "num3",
        "__MeaValue__": -123.38,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num3": -123.38,
      },
      {
        "__DimGroupID__": "num4-num4",
        "__DimGroup__": "num4",
        "__MeaId__": "num4",
        "__MeaName__": "num4",
        "__MeaValue__": 123.34,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num4": 123.34,
      },
      {
        "__DimGroupID__": "num5-num5",
        "__DimGroup__": "num5",
        "__MeaId__": "num5",
        "__MeaName__": "num5",
        "__MeaValue__": 234.38,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num5": 234.38,
      },
      {
        "__DimGroupID__": "num6-num6",
        "__DimGroup__": "num6",
        "__MeaId__": "num6",
        "__MeaName__": "num6",
        "__MeaValue__": -234.34,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num6": -234.34,
      },
      {
        "__DimGroupID__": "num7-num7",
        "__DimGroup__": "num7",
        "__MeaId__": "num7",
        "__MeaName__": "num7",
        "__MeaValue__": -234.38,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num7": -234.38,
      },
      {
        "__DimGroupID__": "num8-num8",
        "__DimGroup__": "num8",
        "__MeaId__": "num8",
        "__MeaName__": "num8",
        "__MeaValue__": 4.5,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num8": 4.5,
      },
      {
        "__DimGroupID__": "num9-num9",
        "__DimGroup__": "num9",
        "__MeaId__": "num9",
        "__MeaName__": "num9",
        "__MeaValue__": 3.5,
        "__OriginalData__": {
          "num0": 123.34,
          "num1": 123.38,
          "num2": -123.34,
          "num3": -123.38,
          "num4": 123.34,
          "num5": 234.38,
          "num6": -234.34,
          "num7": -234.38,
          "num8": 4.5,
          "num9": 3.5,
        },
        "num9": 3.5,
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__DimGroupID__",
  "stackCornerRadius": [
    4,
    4,
    4,
    4,
  ],
  "stackInverse": true,
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "bar",
  "xField": "__MeaName__",
  "yField": "__MeaValue__",
}
`;
